--- a/beacon_scanner/pubspec.yaml
+++ b/beacon_scanner/pubspec.yaml
@@ -7,7 +7,6 @@ version: 0.0.4
 
 environment:
   sdk: ">=2.18.0 <4.0.0"
-  flutter: ">=3.3.0"
 
 flutter:
   plugin:
@@ -20,11 +19,14 @@ flutter:
 dependencies:
   flutter:
     sdk: flutter
-  beacon_scanner_android: ^0.0.4
-  beacon_scanner_ios: ^0.0.3+1
-  beacon_scanner_platform_interface: ^0.0.3
+  beacon_scanner_android:
+    path: ../beacon_scanner_android
+  beacon_scanner_ios:
+    path: ../beacon_scanner_ios
+  beacon_scanner_platform_interface:
+    path: ../beacon_scanner_platform_interface
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  plugin_platform_interface: ^2.0.0
+  plugin_platform_interface: ^2.1.8
