--- a/beacon_scanner_android/android/build.gradle
+++ b/beacon_scanner_android/android/build.gradle
@@ -1,52 +1,52 @@
-group 'com.lukangagames.plugins.beaconscanner'
-version '1.0-SNAPSHOT'
+group = "com.lukangagames.plugins.beaconscanner"
+version = "1.0-SNAPSHOT"
 
 buildscript {
-    ext.kotlin_version = '2.0.0'
+    ext.kotlin_version = "2.0.10"
     repositories {
         google()
         mavenCentral()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.5.1'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath("com.android.tools.build:gradle:8.5.2")
+        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version")
     }
 }
 
-rootProject.allprojects {
+allprojects {
     repositories {
         google()
         mavenCentral()
     }
 }
 
-apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
+apply plugin: "com.android.library"
+apply plugin: "kotlin-android"
 
 android {
-    namespace 'com.lukangagames.plugins.beaconscanner'
-    compileSdkVersion 34
+    namespace = "com.lukangagames.plugins.beaconscanner"
+    compileSdk = 34
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
+        sourceCompatibility = JavaVersion.VERSION_17
+        targetCompatibility = JavaVersion.VERSION_17
     }
 
     defaultConfig {
-        minSdkVersion 30
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        minSdk = 30
+        targetSdk = 34
     }
 
     kotlinOptions {
-        jvmTarget = '17'
+        jvmTarget = JavaVersion.VERSION_17
     }
 
     sourceSets {
-        main.java.srcDirs += 'src/main/kotlin'
+        main.java.srcDirs += "src/main/kotlin"
     }
 }
 
 dependencies {
-    implementation 'org.altbeacon:android-beacon-library:2.20.6'
+    implementation "org.altbeacon:android-beacon-library:2.20.6"
 }
