--- a/beacon_scanner_android/android/src/main/AndroidManifest.xml
+++ b/beacon_scanner_android/android/src/main/AndroidManifest.xml
@@ -1,3 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.lukangagames.plugins.beaconscanner">
+  package="com.lukangagames.plugins.beaconscanner">
+
+    <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
 </manifest>
