--- a/beacon_scanner_android/pubspec.yaml
+++ b/beacon_scanner_android/pubspec.yaml
@@ -1,10 +1,12 @@
 name: beacon_scanner_android
 description: The Android implementation of beacon_scanner_platform_interface
-repository: https://github.com/gfosmbh/beacon_scanner/tree/main/beacon_scanner_android
-version: 0.0.4
+repository: https://github.com/Gigas002/beacon_scanner/tree/main/beacon_scanner_android
+version: 0.1.0
+publish_to: 'none'
 
 environment:
-  sdk: ">=2.18.0 <4.0.0"
+  sdk: ^3.5.0
+  flutter: '>=3.3.0'
 
 flutter:
   plugin:
@@ -22,5 +24,4 @@ dependencies:
     path: ../beacon_scanner_platform_interface
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
+  flutter_lints: any
