--- a/beacon_scanner_platform_interface/pubspec.yaml
+++ b/beacon_scanner_platform_interface/pubspec.yaml
@@ -1,17 +1,18 @@
 name: beacon_scanner_platform_interface
 description: A common platform interface for the beacon_scanner_platform_interface plugin.
-repository: https://github.com/gfosmbh/beacon_scanner/tree/main/beacon_scanner_platform_interface
-version: 0.0.3
+repository: https://github.com/Gigas002/beacon_scanner/tree/main/beacon_scanner_platform_interface
+version: 0.1.0
+publish_to: 'none'
 
 environment:
-  sdk: ">=2.18.0 <4.0.0"
+  sdk: ^3.5.0
+  flutter: '>=3.3.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  plugin_platform_interface: ^2.1.8
-  meta: ^1.15.0
+  plugin_platform_interface: any
+  meta: any
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
+  flutter_lints: any
