refactor 2nd phase

--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -3,10 +3,10 @@
       <service
         android:name=".RangingService"
         android:enabled="true"
-        android:exported="false" />
+        android:exported="true" />
       <service
         android:name=".MonitoringService"
         android:enabled="true"
-        android:exported="false" />
+        android:exported="true" />
     </application>
 </manifest>
